--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.14.2",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
+    "react-router-dom": "^7.5.2",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
+    "@types/react-router-dom": "^5.3.3",
     "replace-in-file": "^8.3.0",
     "ts-node": "^10.9.2"
   }
